--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -27,9 +27,9 @@ file:
 spring:
   servlet:
     multipart:
-      max-request-size: 1024MB
-      max-file-size: 1024MB
-      enabled: true
+      max-request-size: 1024MB    #最大请求大小
+      max-file-size: 1024MB       #最大文件大小
+      enabled: true   #开启文件上传功能
 
   config:
     location: classpath:/
